internship-go/templates/internship-go-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internship-go
  labels:
    app: internship-go
spec:
#  replicas: 2
  selector:
    matchLabels:
      app: internship-go
  template:
    metadata:
      labels:
        app: internship-go
    spec:
      containers:
      - name: internship-go
        image: omarmahmoud10/internship-go
        ports:
        - containerPort: 9090
