internship-go/templates/internship-go-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internship-go-ingress
  labels:
    name: internship-go-ingress
spec:
#  tls: 
#  - host: 
#    - internship-go.com
#    secretName: internship-go-tls-secret
  rules:
  - host: internship-go.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: internship-go-service
            port: 
              number: 9090
